--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         </div>
       </div>
       <ul class="list">
-        <li data-goto="segmented-article" ng-repeat="item in displayedNews" class="nav" ng-click="selectItem(item)">
+        <li ng-repeat="item in displayedNews" class="nav" ng-click="selectItem(item)">
           <span class="bn-rank">{{$index + 1}}</span>
           <div class="bn-news-item">
             <h3 class="bn-news-title">{{item.title}} 
               <span ng-show="item.domain.length > 0" class="bn-news-domain">({{item.domain}})</span>
             </h3>
             <div>
-              <span>{{item.points}} points</span> and <span>{{item.comments}}</span> &middot;
+              <span>{{item.points_text}}</span> and <span>{{item.comments}}</span> &middot;
               <span>{{item.time}}</span> by {{item.author}} &middot;
               <span class="{{item.type}}">{{{designernews: 'Designer News', hackernews: 'Hacker News'}[item.type]}}</span>
             </div>
