--- a/index.html
+++ b/index.html
@@ -7,26 +7,70 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="msapplication-tap-highlight" content="no">
   <title>Builder News</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="favicon-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="favicon-160x160.png" sizes="160x160">
+  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="mstile-144x144.png">
+
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700' rel='stylesheet' type='text/css'>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/chui-ios-3.7.0.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/chui-3.7.0.min.js"></script>
+  <script src="js/chui-3.7.0.js"></script>
   <script src="js/underscore-min.js"></script>
   <script src="js/localforage.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 </head>
 <body ng-app ng-controller="MainCtrl">
+
+  <nav>
+    <h1>About</h1>
+  </nav>
+  <article id="about" class="next">
+    <section>
+      <img src="img/builder-news-icon.png" class="bn-icon">
+      <div class="bn-about">
+        <h2 class="bn-app-name text-center">Builder News</h2>
+        <h3 class="text-center">An aggregator for Hacker News and Designer News</h3>
+        <ul class="list bn-about-list">
+          <li class="nav" data-link="https://news.ycombinator.com/news">
+            <h3><i class="fa fa-hacker-news fa-lg hackernews"></i> Hacker News Homepage</h3>
+          </li>
+          <li class="nav" data-link="https://news.layervault.com/">
+            <h3><i class="fa fa-picture-o fa-lg designernews"></i> Designer News Homepage</h3>
+          </li>
+          <li class="nav">
+            <h3><i class="fa fa-github fa-lg"></i> Builder News on Github</h3>
+          </li>
+          <li class="nav">
+            <h3><i class="fa fa-envelope-o fa-lg contact-icon"></i> Send Feedback</h3>
+          </li>
+        </ul>
+        <h3 class="text-center">Built by Tay Yang Shun</h3>
+        <p class="text-center">Not affliated with Hacker News and Designer News.</p>
+      </div>
+    </section>
+  </article>
+
   <nav>
     <h1>Builder News</h1>
-    <a class="button align-flush" id="bookmarks-nav">
-      <i class="fa fa-bars"></i>
-    </a>
   </nav>
   <article id="main" class="current">
     <section>
-      <div class="horizontal centered">
+      <div class="horizontal centered bn-segment-container">
         <div class="segmented bn-segments">
           <a class="button bn-all selected" ng-click="displayNews('all')">All</a>
           <a class="button bn-hn" ng-click="displayNews('hackernews')">Hacker</a>
@@ -53,8 +97,8 @@
       </ul>
     </section>
   </article>
+
   <nav>
-    <a class="button back">Back</a>
     <h1>Bookmarks</h1>
   </nav>
   <article id="bookmarks" class="next">
@@ -79,6 +123,7 @@
       </ul>
     </section>
   </article>
+  
   <script src="js/main.js"></script>
   <script src="js/app.js"></script>
 </body>
