Added clicking for about page links

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           <li class="nav" data-link="https://news.layervault.com/">
             <h3><i class="fa fa-picture-o fa-lg designernews"></i> Designer News Homepage</h3>
           </li>
-          <li class="nav">
+          <li class="nav" data-link="https://github.com/yangshun/builder-news">
             <h3><i class="fa fa-github fa-lg"></i> Builder News on Github</h3>
           </li>
-          <li class="nav">
+          <li class="nav" data-link="mailto:tay.yang.shun@gmail.com">
             <h3><i class="fa fa-envelope-o fa-lg contact-icon"></i> Send Feedback</h3>
           </li>
         </ul>
