--- a/index.html
+++ b/index.html
@@ -38,35 +38,6 @@
 <body ng-app ng-controller="MainCtrl">
 
   <nav>
-    <h1>About</h1>
-  </nav>
-  <article id="about" class="next">
-    <section>
-      <img src="img/builder-news-icon.png" class="bn-icon">
-      <div class="bn-about">
-        <h2 class="bn-app-name text-center">Builder News</h2>
-        <h3 class="text-center">An aggregator for Hacker News and Designer News</h3>
-        <ul class="list bn-about-list">
-          <li class="nav" data-link="https://news.ycombinator.com/news">
-            <h3><i class="fa fa-hacker-news fa-lg hackernews"></i> Hacker News Homepage</h3>
-          </li>
-          <li class="nav" data-link="https://news.layervault.com/">
-            <h3><i class="fa fa-picture-o fa-lg designernews"></i> Designer News Homepage</h3>
-          </li>
-          <li class="nav" data-link="https://github.com/yangshun/builder-news">
-            <h3><i class="fa fa-github fa-lg"></i> Builder News on Github</h3>
-          </li>
-          <li class="nav" data-link="mailto:tay.yang.shun@gmail.com">
-            <h3><i class="fa fa-envelope-o fa-lg contact-icon"></i> Send Feedback</h3>
-          </li>
-        </ul>
-        <h3 class="text-center">Built by Tay Yang Shun</h3>
-        <p class="text-center">Not affliated with Hacker News and Designer News.</p>
-      </div>
-    </section>
-  </article>
-
-  <nav>
     <h1>Builder News</h1>
   </nav>
   <article id="main" class="current">
@@ -106,7 +77,7 @@
   <article id="bookmarks" class="next">
     <section>
       <ul class="list">
-        <li ng-repeat="item in bookmarks" class="bn-news-row">
+        <li ng-repeat="item in bookmarks track by $index" class="bn-news-row">
           <span class="bn-rank">{{$index + 1}}</span>
           <span class="bn-star" ng-click="bookmarkItem(item)">
             <i class="fa fa-times fa-lg"></i>
@@ -125,7 +96,36 @@
       </ul>
     </section>
   </article>
-  
+
+  <nav>
+    <h1>About</h1>
+  </nav>
+  <article id="about" class="next">
+    <section>
+      <img src="img/builder-news-icon.png" class="bn-icon">
+      <div class="bn-about">
+        <h2 class="bn-app-name text-center">Builder News</h2>
+        <h3 class="text-center">An aggregator for Hacker News and Designer News</h3>
+        <ul class="list bn-about-list">
+          <li class="nav" data-link="https://news.ycombinator.com/news">
+            <h3><i class="fa fa-hacker-news fa-lg hackernews"></i> Hacker News Homepage</h3>
+          </li>
+          <li class="nav" data-link="https://news.layervault.com/">
+            <h3><i class="fa fa-picture-o fa-lg designernews"></i> Designer News Homepage</h3>
+          </li>
+          <li class="nav" data-link="https://github.com/yangshun/builder-news">
+            <h3><i class="fa fa-github fa-lg"></i> Builder News on Github</h3>
+          </li>
+          <li class="nav" data-link="mailto:tay.yang.shun@gmail.com">
+            <h3><i class="fa fa-envelope-o fa-lg contact-icon"></i> Send Feedback</h3>
+          </li>
+        </ul>
+        <h3 class="text-center">Built by Tay Yang Shun</h3>
+        <p class="text-center">Not affliated with Hacker News and Designer News.</p>
+      </div>
+    </section>
+  </article>
+
   <script src="js/main.js"></script>
   <script src="js/app.js"></script>
 </body>
