Added settings page

--- a/demo-ios.html
+++ b/demo-ios.html
@@ -9,7 +9,7 @@
   <title>ChocolateChip-UI iOS</title>
   <link rel="stylesheet" href="css/chui-ios-3.7.0.min.css">
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/chui-3.7.0.min.js"></script>
+  <script src="js/vendor/chui-3.7.0.min.js"></script>
   <style>
     .icon {
       height: 40px;
