--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div>
               <span>{{item.points_text}}</span> and <span>{{item.comments}}</span> &middot;
               <span>{{item.time}}</span> by {{item.author}} &middot;
-              <span class="{{item.type}}">{{{designernews: 'Designer News', hackernews: 'Hacker News'}[item.type]}}</span>
+              <span class="{{item.type}}">{{linkTypes[item.type]}}</span>
             </div>
           </div>
         </li>
@@ -76,11 +76,16 @@
     <section>
       <div ng-show="favourites.length === 0" class="text-center empty-favourites-container">
         <i class="fa fa-star-o fa-4x"></i>
-        <h3 class="empty-favourites">Your favourites list is empty.<br>Click on the <i class="fa fa-star-o"></i> icon to<br> add links to your favourites.</h3>
+        <h3 class="empty-favourites">Your favourites list is empty.<br>
+          Click on the <i class="fa fa-star-o"></i> icon to<br>
+          add links to your favourites.</h3>
+      </div>
+      <div>
+      <div ng-show="favourites.length !== 0"class="searchBar">
+        <input placeholder="Find a favourited link" type="search" ng-model="searchText">
       </div>
       <ul class="list">
-        <li ng-repeat="item in favourites track by $index" class="bn-news-row">
-          <span class="bn-rank">{{$index + 1}}</span>
+        <li ng-repeat="item in favourites | filter:searchText" class="bn-news-row">
           <span class="bn-star" ng-click="bookmarkItem(item)">
             <i class="fa fa-times fa-lg"></i>
           </span>
@@ -91,11 +96,12 @@
             <div>
               <span>{{item.points_text}}</span> and <span>{{item.comments}}</span> &middot;
               <span>{{item.time}}</span> by {{item.author}} &middot;
-              <span class="{{item.type}}">{{{designernews: 'Designer News', hackernews: 'Hacker News'}[item.type]}}</span>
+              <span class="{{item.type}}">{{linkTypes[item.type]}}</span>
             </div>
           </div>
         </li>
       </ul>
+      </div>
     </section>
   </article>
 
