Improve mobile friendliness

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h3 class="bn-news-title">{{item.title}} 
               <span ng-show="item.domain.length > 0" class="bn-news-domain">({{item.domain}})</span>
             </h3>
-            <div>
+            <div class="bn-news-details">
               <span>{{item.points_text}}</span> and <span>{{item.comments}}</span> &middot;
               <span>{{item.time}}</span> by {{item.author}} &middot;
               <span class="{{item.type}}">{{linkTypes[item.type]}}</span>
