--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
               <span ng-show="item.domain.length > 0" class="bn-news-domain">({{item.domain}})</span>
             </h3>
             <div>
-              <span>{{item.points_text}}</span> and <span>{{item.comments}}</span> &middot;
-              <span>{{item.time}}</span> by {{item.author}} &middot;
+              <span ng-show="item.points_text.length > 0">{{item.points_text}} and</span>
+              <span ng-show="item.comments.length > 0">{{item.comments}} &middot;</span>
+              <span ng-show="item.time.length > 0">{{item.time}}</span>
+              <span ng-show="item.author.length > 0"> by {{item.author}} &middot;</span>
               <span class="{{item.type}}">{{linkTypes[item.type]}}</span>
             </div>
           </div>
